--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -196,25 +196,26 @@
       "        [ 0.2579,  0.3420, -0.8168,  ..., -0.4098,  0.4978, -0.3721],\n",
       "        [ 0.7957,  0.5350,  0.9427,  ..., -1.0749,  0.0955, -1.4138],\n",
       "        ...,\n",
-      "        [-0.1837,  1.1975,  1.1828,  ...,  2.0874, -1.2495,  0.4475],\n",
-      "        [ 1.3652,  0.1446, -1.2063,  ..., -3.0424, -1.5444,  1.4202],\n",
-      "        [ 0.5061, -1.6644,  0.5144,  ..., -0.0105,  0.2888,  1.6012]],\n",
+      "        [ 0.5607,  0.7729, -0.1801,  ...,  0.5419,  0.3875, -1.5342],\n",
+      "        [-1.0653, -0.0488,  0.0960,  ..., -1.2737, -1.0766, -0.4033],\n",
+      "        [ 1.3584, -0.4814,  0.6285,  ..., -0.5978, -2.5386, -0.7635]],\n",
       "       requires_grad=True)\n",
-      "torch.Size([65, 768])\n"
+      "torch.Size([128, 768])\n"
      ]
     }
    ],
    "source": [
     "torch.manual_seed(123)\n",
     "dim_embd = 768\n",
-    "embedding_layer = torch.nn.Embedding(cd.get_vocab_size(), dim_embd)\n",
-    "print(embedding_layer.weight)\n",
-    "print(embedding_layer.weight.shape)"
+    "# token embeddints\n",
+    "token_embd = torch.nn.Embedding(config['block_size'], dim_embd)\n",
+    "print(token_embd.weight)\n",
+    "print(token_embd.weight.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -227,18 +228,39 @@
     }
    ],
    "source": [
-    "print(embedding_layer(x).shape)\n",
-    "print(embedding_layer(y).shape)"
+    "print(token_embd(x).shape)\n",
+    "print(token_embd(y).shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# position\n",
-    "pos_embedding_layer = torch.nn.Embedding(config['block_size'], )"
+    "# positional embedding\n",
+    "pos_embed = torch.nn.Embedding(config['block_size'], dim_embd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([128, 768])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_embd = token_embd(x) + pos_embed(x)\n",
+    "input_embd.shape"
    ]
   },
   {
@@ -250,16 +272,273 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute attention weights\n",
+    "token_embeddings = token_embd(x)\n",
+    "def compute_attention_weights(token_embeddings):\n",
+    "    n_tokens = len(token_embeddings)\n",
+    "    ws = torch.empty((n_tokens, n_tokens))\n",
+    "    # attention weight of token i\n",
+    "    for i in range(n_tokens):\n",
+    "        w = [torch.dot(token_embeddings[i], token_embeddings[j]).item() for j in range(n_tokens)]\n",
+    "        ws[i] = torch.softmax(torch.tensor(w), dim=-1) # an attention weight vector for each token\n",
+    "    return ws"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.5000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0000, 0.0556, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0000, 0.0000, 0.2500,  ..., 0.2500, 0.0000, 0.0000],\n",
+       "        ...,\n",
+       "        [0.0000, 0.0000, 0.2500,  ..., 0.2500, 0.0000, 0.0000],\n",
+       "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0588, 0.0000],\n",
+       "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.1429]],\n",
+       "       grad_fn=<SoftmaxBackward0>)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compute attention weights with tensor operations\n",
+    "attention_weights = torch.softmax(token_embeddings @ token_embeddings.T, dim=-1)\n",
+    "attention_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.5000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0000, 0.0556, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+       "        [0.0000, 0.0000, 0.2500,  ..., 0.2500, 0.0000, 0.0000],\n",
+       "        ...,\n",
+       "        [0.0000, 0.0000, 0.2500,  ..., 0.2500, 0.0000, 0.0000],\n",
+       "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0588, 0.0000],\n",
+       "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.1429]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attention_weights = compute_attention_weights(token_embeddings) # weight vector each row\n",
+    "attention_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 5.0606e-01, -1.6644e+00,  5.1440e-01,  ..., -1.0457e-02,\n",
+       "          2.8881e-01,  1.6012e+00],\n",
+       "        [-1.9695e-01,  1.1613e+00, -7.8531e-01,  ...,  3.4494e-01,\n",
+       "         -1.5509e+00,  1.7803e+00],\n",
+       "        [ 1.3142e+00, -5.6748e-01, -7.7758e-01,  ..., -4.4057e-01,\n",
+       "         -2.4888e-01,  2.7978e-01],\n",
+       "        ...,\n",
+       "        [ 1.3142e+00, -5.6748e-01, -7.7758e-01,  ..., -4.4057e-01,\n",
+       "         -2.4888e-01,  2.7978e-01],\n",
+       "        [ 2.5787e-01,  3.4197e-01, -8.1678e-01,  ..., -4.0981e-01,\n",
+       "          4.9785e-01, -3.7207e-01],\n",
+       "        [-8.8016e-01,  1.0547e+00,  8.5828e-01,  ..., -2.1427e+00,\n",
+       "          4.3886e-03, -1.8542e-03]], grad_fn=<MmBackward0>)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# context vector\n",
+    "context_vectors = attention_weights @ token_embeddings\n",
+    "context_vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttention(nn.Module):\n",
+    "\n",
+    "    def __init__(self, d_in, d_out, \n",
+    "                 context_length, dropout, num_heads, qkv_bias=False):\n",
+    "        super().__init__()\n",
+    "        assert (d_out % num_heads == 0), \\\n",
+    "            \"d_out must be divisible by num_heads\"\n",
+    "\n",
+    "        self.d_out = d_out\n",
+    "        self.num_heads = num_heads\n",
+    "        self.head_dim = d_out // num_heads    #1\n",
+    "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_key = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
+    "        self.out_proj = nn.Linear(d_out, d_out)    #2\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.register_buffer(\n",
+    "            \"mask\",\n",
+    "            torch.triu(torch.ones(context_length, context_length),\n",
+    "                       diagonal=1)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, num_tokens, d_in = x.shape\n",
+    "        keys = self.W_key(x)         #3\n",
+    "        queries = self.W_query(x)    #3\n",
+    "        values = self.W_value(x)     #3\n",
+    "\n",
+    "        keys = keys.view(b, num_tokens, self.num_heads, self.head_dim)       #4”\n",
+    "\n",
+    "        values = values.view(b, num_tokens, self.num_heads, self.head_dim)  \n",
+    "        queries = queries.view(                                             \n",
+    "            b, num_tokens, self.num_heads, self.head_dim                    \n",
+    "        )                                                                   \n",
+    "\n",
+    "        keys = keys.transpose(1, 2)          #5\n",
+    "        queries = queries.transpose(1, 2)    #5\n",
+    "        values = values.transpose(1, 2)      #5\n",
+    "\n",
+    "        attn_scores = queries @ keys.transpose(2, 3)   #6\n",
+    "        mask_bool = self.mask.bool()[:num_tokens, :num_tokens]    #7\n",
+    "\n",
+    "        attn_scores.masked_fill_(mask_bool, -torch.inf)     #8\n",
+    "\n",
+    "        attn_weights = torch.softmax(\n",
+    "            attn_scores / keys.shape[-1]**0.5, dim=-1)\n",
+    "        attn_weights = self.dropout(attn_weights)\n",
+    "\n",
+    "        context_vec = (attn_weights @ values).transpose(1, 2)   #9\n",
+    " #10\n",
+    "        context_vec = context_vec.contiguous().view(\n",
+    "            b, num_tokens, self.d_out\n",
+    "        )\n",
+    "        context_vec = self.out_proj(context_vec)    #11\n",
+    "        return context_vec\n",
+    "\n",
+    "     #1 Reduces the projection dim to match the desired output dim\n",
+    "     #2 Uses a Linear layer to combine head outputs\n",
+    "     #3 Tensor shape: (b, num_tokens, d_out)\n",
+    "     #4 We implicitly split the matrix by adding a num_heads dimension. Then we unroll the last dim: (b, num_tokens, d_out) -&gt; (b, num_tokens, num_heads, head_dim).\n",
+    "     #5 Transposes from shape (b, num_tokens, num_heads, head_dim) to (b, num_heads, num_tokens, head_dim)\n",
+    "     #6 Computes dot product for each head\n",
+    "     #7 Masks truncated to the number of tokens\n",
+    "     #8 Uses the mask to fill attention scores\n",
+    "     #9 Tensor shape: (b, num_tokens, n_heads, head_dim)\n",
+    "     #10 Combines heads, where self.d_out = self.num_heads * self.head_dim\n",
+    "     #11 Adds an optional linear projection"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "GPT_CONFIG_124M = {\n",
+    "    \"vocab_size\": 50257,     # Vocabulary size\n",
+    "    \"context_length\": 1024,  # Context length\n",
+    "    \"emb_dim\": 768,          # Embedding dimension\n",
+    "    \"n_heads\": 12,           # Number of attention heads\n",
+    "    \"n_layers\": 12,          # Number of layers\n",
+    "    \"drop_rate\": 0.1,        # Dropout rate\n",
+    "    \"qkv_bias\": False        # Query-Key-Value bias\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Feed Forward Neural Networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GPTModel(nn.Module):\n",
+    "    def __init__(self, cfg):\n",
+    "        super().__init__()\n",
+    "        self.tok_emb = nn.Embedding(cfg[\"vocab_size\"], cfg[\"emb_dim\"])\n",
+    "        self.pos_emb = nn.Embedding(cfg[\"context_length\"], cfg[\"emb_dim\"])\n",
+    "        self.drop_emb = nn.Dropout(cfg[\"drop_rate\"])\n",
+    "        self.trf_blocks = nn.Sequential(               #1\n",
+    "            *[DummyTransformerBlock(cfg)               #1\n",
+    "              for _ in range(cfg[\"n_layers\"])]         #1\n",
+    "        )                                              #1\n",
+    "        self.final_norm = LayerNorm(cfg[\"emb_dim\"])     #2\n",
+    "        self.out_head = nn.Linear(\n",
+    "            cfg[\"emb_dim\"], cfg[\"vocab_size\"], bias=False\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, in_idx):\n",
+    "        batch_size, seq_len = in_idx.shape\n",
+    "        tok_embeds = self.tok_emb(in_idx)\n",
+    "        pos_embeds = self.pos_emb(\n",
+    "            torch.arange(seq_len, device=in_idx.device)\n",
+    "        )\n",
+    "        x = tok_embeds + pos_embeds\n",
+    "        x = self.drop_emb(x)\n",
+    "        x = self.trf_blocks(x)\n",
+    "        x = self.final_norm(x)\n",
+    "        logits = self.out_head(x)\n",
+    "        return logits\n",
+    "\n",
+    "class DummyTransformerBlock(nn.Module):    #3\n",
+    "    def __init__(self, cfg):\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def forward(self, x):     #4\n",
+    "        return x\n",
+    "\n",
+    "class LayerNorm(nn.Module):\n",
+    "    def __init__(self, emb_dim):\n",
+    "        super().__init__()\n",
+    "        self.eps = 1e-5\n",
+    "        self.scale = nn.Parameter(torch.ones(emb_dim))\n",
+    "        self.shift = nn.Parameter(torch.zeros(emb_dim))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        mean = x.mean(dim=-1, keepdim=True)\n",
+    "        var = x.var(dim=-1, keepdim=True, unbiased=False)\n",
+    "        norm_x = (x - mean) / torch.sqrt(var + self.eps)\n",
+    "        return self.scale * norm_x + self.shift # trainable scale and shift"
    ]
   },
   {
@@ -277,12 +556,47 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Positional encodings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resiudal connections"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Layer normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -296,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
