--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "torch.Size([128, 768])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "       grad_fn=<SoftmaxBackward0>)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "        [0.0000, 0.0000, 0.0000,  ..., 0.0000, 0.0000, 0.1429]])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "          4.3886e-03, -1.8542e-03]], grad_fn=<MmBackward0>)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,6 +487,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformer Block"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Causal Self Attention Mechanism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CausalSelfAttn(nn.Module):\n",
+    "    def __init__(self, config):\n",
+    "        super().__init__()\n",
+    "        nn.query = nn.Parameter(config['block_size', 'emb_dim'])\n",
+    "        nn.key = nn.Parameter(config['block_size', 'emb_dim'])\n",
+    "        nn.value = nn.Parameter(config['block_size', 'emb_dim'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Layer normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LayerNorm(nn.Module):\n",
+    "    def __init__(self, emb_dim):\n",
+    "        super().__init__()\n",
+    "        self.eps = 1e-5\n",
+    "        self.scale = nn.Parameter(torch.ones(emb_dim))\n",
+    "        self.shift = nn.Parameter(torch.zeros(emb_dim))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        mean = x.mean(dim=-1, keepdim=True)\n",
+    "        var = x.var(dim=-1, keepdim=True, unbiased=False)\n",
+    "        norm_x = (x - mean) / torch.sqrt(var + self.eps)\n",
+    "        return self.scale * norm_x + self.shift\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feed Forward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FeedForward(nn.Module):\n",
+    "    def __init__(self, emb_dim):\n",
+    "        super().__init__()\n",
+    "        self.layers = nn.Sequential([\n",
+    "            nn.Linear(emb_dim, emb_dim*4),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(emb_dim*4, emb_dim)\n",
+    "        ])\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return self.layers(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assemble, with residual connections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransformerBlock(nn.Module):\n",
+    "    def __init__(self, cfg):\n",
+    "        super().__init__()\n",
+    "        self.norm1 = LayerNorm(cfg['emb_dim'])\n",
+    "        self.norm2 = LayerNorm(cfg['emb_dim'])\n",
+    "        self.dropout = nn.Dropout(cfg['drop_rate'])\n",
+    "        self.attn = MultiHeadAttention(config['d_in'], \n",
+    "                                       config['d_out'], \n",
+    "                                       config['context_length'], \n",
+    "                                       config['drop_rate'], \n",
+    "                                       config['num_heads'], \n",
+    "                                       config['qkv_bias'])\n",
+    "        self.feedfwd = FeedForward(config['emb_dim'])\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        res = x\n",
+    "        x = self.norm1(x)\n",
+    "        x = self.attn(x)\n",
+    "        x = self.dropout(x)\n",
+    "        x = x + res\n",
+    "        res = x\n",
+    "        x = self.norm2(x)\n",
+    "        x = self.feedfwd(x)\n",
+    "        x = self.dropout(x)\n",
+    "        x = res + x\n",
+    "\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ALL IN ONE\n",
+    "\n",
+    "with positional encodings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -498,11 +630,11 @@
     "        self.tok_emb = nn.Embedding(cfg[\"vocab_size\"], cfg[\"emb_dim\"])\n",
     "        self.pos_emb = nn.Embedding(cfg[\"context_length\"], cfg[\"emb_dim\"])\n",
     "        self.drop_emb = nn.Dropout(cfg[\"drop_rate\"])\n",
-    "        self.trf_blocks = nn.Sequential(               #1\n",
-    "            *[DummyTransformerBlock(cfg)               #1\n",
-    "              for _ in range(cfg[\"n_layers\"])]         #1\n",
-    "        )                                              #1\n",
-    "        self.final_norm = LayerNorm(cfg[\"emb_dim\"])     #2\n",
+    "        self.trf_blocks = nn.Sequential(\n",
+    "            *[TransformerBlock(cfg)\n",
+    "              for _ in range(cfg[\"n_layers\"])]\n",
+    "        )\n",
+    "        self.final_norm = LayerNorm(cfg[\"emb_dim\"])\n",
     "        self.out_head = nn.Linear(\n",
     "            cfg[\"emb_dim\"], cfg[\"vocab_size\"], bias=False\n",
     "        )\n",
@@ -518,75 +650,8 @@
     "        x = self.trf_blocks(x)\n",
     "        x = self.final_norm(x)\n",
     "        logits = self.out_head(x)\n",
-    "        return logits\n",
-    "\n",
-    "class DummyTransformerBlock(nn.Module):    #3\n",
-    "    def __init__(self, cfg):\n",
-    "        super().__init__()\n",
-    "\n",
-    "    def forward(self, x):     #4\n",
-    "        return x\n",
-    "\n",
-    "class LayerNorm(nn.Module):\n",
-    "    def __init__(self, emb_dim):\n",
-    "        super().__init__()\n",
-    "        self.eps = 1e-5\n",
-    "        self.scale = nn.Parameter(torch.ones(emb_dim))\n",
-    "        self.shift = nn.Parameter(torch.zeros(emb_dim))\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        mean = x.mean(dim=-1, keepdim=True)\n",
-    "        var = x.var(dim=-1, keepdim=True, unbiased=False)\n",
-    "        norm_x = (x - mean) / torch.sqrt(var + self.eps)\n",
-    "        return self.scale * norm_x + self.shift # trainable scale and shift"
+    "        return logits"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Positional encodings, residual connections, layer normalizations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Positional encodings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Resiudal connections"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Layer normalization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -596,7 +661,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -610,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
