--- a/train_and_eval.ipynb
+++ b/train_and_eval.ipynb
@@ -642,12 +642,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh! My god! Speak 'pardon' to right of birth, your grace sends you word by course of justice: yet thou bear'st\n",
+      "Are never to return.\n",
+      "O excellent devise! make you and homestic in thy mind, that he hath sent for that the heavens to smile at me this most bloody business in the common people.\n",
+      "\n",
+      "CORIOLANUS:\n",
+      "I will not for the world but grief makes us wretches, orphans, castaways for wind, as well as I,\n",
+      "But not take\n"
+     ]
+    }
+   ],
    "source": [
     "with torch.no_grad():\n",
-    "    output1 = model.generate('Oh! My god!', cd, 400, 0.8)"
+    "    output3 = model.generate('Oh! My god!', cd, 400, temperature=0.1)\n",
+    "print(output3)"
    ]
   },
   {
@@ -679,6 +694,8 @@
     }
    ],
    "source": [
+    "with torch.no_grad():\n",
+    "    output1 = model.generate('Oh! My god!', cd, 400, temperature=0.8)\n",
     "print(output1)"
    ]
   },
@@ -719,33 +736,8 @@
    ],
    "source": [
     "with torch.no_grad():\n",
-    "    output2 = model.generate('Oh! My god!', cd, 400, 1)\n",
+    "    output2 = model.generate('Oh! My god!', cd, 400, temperature=1)\n",
     "print(output2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Oh! My god! Speak 'pardon' to right of birth, your grace sends you word by course of justice: yet thou bear'st\n",
-      "Are never to return.\n",
-      "O excellent devise! make you and homestic in thy mind, that he hath sent for that the heavens to smile at me this most bloody business in the common people.\n",
-      "\n",
-      "CORIOLANUS:\n",
-      "I will not for the world but grief makes us wretches, orphans, castaways for wind, as well as I,\n",
-      "But not take\n"
-     ]
-    }
-   ],
-   "source": [
-    "with torch.no_grad():\n",
-    "    output3 = model.generate('Oh! My god!', cd, 400, 0.1)\n",
-    "print(output3)"
    ]
   },
   {
@@ -769,7 +761,7 @@
    ],
    "source": [
     "with torch.no_grad():\n",
-    "    output4 = model.generate('Oh! My god!', cd, 400, 10)\n",
+    "    output4 = model.generate('Oh! My god!', cd, 400, temperature=10)\n",
     "print(output4)"
    ]
   },
